--- a/css/main.css
+++ b/css/main.css
@@ -1,68 +1,207 @@
+:root {
+  --bs-body-bg: #F2E5D8;
+  --bs-body-bg-rgb: 242, 229, 216;
+  --bs-primary: #7C0E0F;
+  --bs-primary-rgb: 124, 14, 15;
 
-/* CSS Reset */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-main, menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+
+
+
+
+
+
+
+  /* --bs-blue: #0d6efd;
+    --bs-indigo: #6610f2;
+    --bs-purple: #6f42c1;
+    --bs-pink: #d63384;
+    --bs-red: #dc3545;
+    --bs-orange: #fd7e14;
+    --bs-yellow: #ffc107;
+    --bs-green: #198754;
+    --bs-teal: #20c997;
+    --bs-cyan: #0dcaf0;
+    --bs-black: #000;
+    --bs-white: #fff;
+    --bs-gray: #6c757d;
+    --bs-gray-dark: #343a40;
+    --bs-gray-100: #f8f9fa;
+    --bs-gray-200: #e9ecef;
+    --bs-gray-300: #dee2e6;
+    --bs-gray-400: #ced4da;
+    --bs-gray-500: #adb5bd;
+    --bs-gray-600: #6c757d;
+    --bs-gray-700: #495057;
+    --bs-gray-800: #343a40;
+    --bs-gray-900: #212529;
+    --bs-secondary: #6c757d;
+    --bs-success: #198754;
+    --bs-info: #0dcaf0;
+    --bs-warning: #ffc107;
+    --bs-danger: #dc3545;
+    --bs-light: #f8f9fa;
+    --bs-dark: #212529;
+    --bs-secondary-rgb: 108,117,125;
+    --bs-success-rgb: 25,135,84;
+    --bs-info-rgb: 13,202,240;
+    --bs-warning-rgb: 255,193,7;
+    --bs-danger-rgb: 220,53,69;
+    --bs-light-rgb: 248,249,250;
+    --bs-dark-rgb: 33,37,41;
+    --bs-primary-text-emphasis: #052c65;
+    --bs-secondary-text-emphasis: #2b2f32;
+    --bs-success-text-emphasis: #0a3622;
+    --bs-info-text-emphasis: #055160;
+    --bs-warning-text-emphasis: #664d03;
+    --bs-danger-text-emphasis: #58151c;
+    --bs-light-text-emphasis: #495057;
+    --bs-dark-text-emphasis: #495057;
+    --bs-primary-bg-subtle: #cfe2ff;
+    --bs-secondary-bg-subtle: #e2e3e5;
+    --bs-success-bg-subtle: #d1e7dd;
+    --bs-info-bg-subtle: #cff4fc;
+    --bs-warning-bg-subtle: #fff3cd;
+    --bs-danger-bg-subtle: #f8d7da;
+    --bs-light-bg-subtle: #fcfcfd;
+    --bs-dark-bg-subtle: #ced4da;
+    --bs-primary-border-subtle: #9ec5fe;
+    --bs-secondary-border-subtle: #c4c8cb;
+    --bs-success-border-subtle: #a3cfbb;
+    --bs-info-border-subtle: #9eeaf9;
+    --bs-warning-border-subtle: #ffe69c;
+    --bs-danger-border-subtle: #f1aeb5;
+    --bs-light-border-subtle: #e9ecef;
+    --bs-dark-border-subtle: #adb5bd;
+    --bs-white-rgb: 255,255,255;
+    --bs-black-rgb: 0,0,0;
+    --bs-font-sans-serif: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    --bs-font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+    --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+    --bs-body-font-family: var(--bs-font-sans-serif);
+    --bs-body-font-size: 1rem;
+    --bs-body-font-weight: 400;
+    --bs-body-line-height: 1.5;
+    --bs-body-color: #212529;
+    --bs-body-color-rgb: 33,37,41;
+    --bs-emphasis-color: #000;
+    --bs-emphasis-color-rgb: 0,0,0;
+    --bs-secondary-color: rgba(33, 37, 41, 0.75);
+    --bs-secondary-color-rgb: 33,37,41;
+    --bs-secondary-bg: #e9ecef;
+    --bs-secondary-bg-rgb: 233,236,239;
+    --bs-tertiary-color: rgba(33, 37, 41, 0.5);
+    --bs-tertiary-color-rgb: 33,37,41;
+    --bs-tertiary-bg: #f8f9fa;
+    --bs-tertiary-bg-rgb: 248,249,250;
+    --bs-heading-color: inherit;
+    --bs-link-color: #0d6efd;
+    --bs-link-color-rgb: 13,110,253;
+    --bs-link-decoration: underline;
+    --bs-link-hover-color: #0a58ca;
+    --bs-link-hover-color-rgb: 10,88,202;
+    --bs-code-color: #d63384;
+    --bs-highlight-color: #212529;
+    --bs-highlight-bg: #fff3cd;
+    --bs-border-width: 1px;
+    --bs-border-style: solid;
+    --bs-border-color: #dee2e6;
+    --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
+    --bs-border-radius: 0.375rem;
+    --bs-border-radius-sm: 0.25rem;
+    --bs-border-radius-lg: 0.5rem;
+    --bs-border-radius-xl: 1rem;
+    --bs-border-radius-xxl: 2rem;
+    --bs-border-radius-2xl: var(--bs-border-radius-xxl);
+    --bs-border-radius-pill: 50rem;
+    --bs-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    --bs-box-shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+    --bs-box-shadow-lg: 0 1rem 3rem rgba(0, 0, 0, 0.175);
+    --bs-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+    --bs-focus-ring-width: 0.25rem;
+    --bs-focus-ring-opacity: 0.25;
+    --bs-focus-ring-color: rgba(13, 110, 253, 0.25);
+    --bs-form-valid-color: #198754;
+    --bs-form-valid-border-color: #198754;
+    --bs-form-invalid-color: #dc3545;
+    --bs-form-invalid-border-color: #dc3545; */
 }
 
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, main, menu, nav, section {
-    display: block;
+:root {
+  /* --bs-emphasis-color: #c8fee3;
+    --bs-emphasis-color-rgb: 200, 254, 227; */
+
+  /* --bs-body-bg-rgb: 255, 255, 255;
+    --bs-secondary: #000000;
+    --bs-secondary-rgb: 0, 0, 0;
+    --bs-border-width: 0;
+    --bs-border-radius: 0;
+    --bs-heading-color: var(--bs-emphasis-color);
+    --bs-white: #fff;
+    --bs-white-rgb: 255, 255, 255;
+    --bs-primary-text-emphasis: #c8fee3;
+    --bs-dark-bg-subtle: #dcd5c1; */
 }
 
 body {
-    line-height: 1;
+
+    font-family: 'Abril Fatface', 'Cedarville Cursive', 'Raleway', serif;
+  line-height: 1;
+  background-color: var(--bs-body-bg);
+}
+h1 {
+  font-family: 'Abril Fatface', serif;
+  font-size: 3rem;
 }
 
-ol, ul {
-    list-style: none;
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 200;
+  line-height: 1.7;
+}
+h2{
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 2.5rem;
 }
 
-blockquote, q {
-    quotes: none;
+
+
+ol,
+ul {
+  list-style: none;
+  line-height: 2;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 .logoimg {
-    max-width: 200px; /* Adjust the size as needed */
-    height: auto;
-    margin-bottom: 20px; /* Remove margin */
-    position:absolute;
-    top: 0;
-   left: 0;
+  max-width: 200px;
+  /* Adjust the size as needed */
+  height: auto;
+  margin-bottom: 20px;
+  /* Remove margin */
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.container {
-    background-color: #F2E5D8;
-    font-family: "Helvetica Neue";
-}
+
 
 
 
@@ -81,8 +220,8 @@ body {
   --bar-width: 60px;
   --bar-height: 8px;
   --hamburger-gap: 6px;
-  --foreground:#7B0F0F; 
-  --background:#F2E5D8;
+  --foreground: #7B0F0F;
+  --background: #F2E5D8;
   --hamburger-margin: 8px;
   --animation-timing: 200ms ease-in-out;
   --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
@@ -91,8 +230,8 @@ body {
 .hamburger-menu {
   --x-width: calc(var(--hamburger-height) * 1.41421356237);
 
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   gap: var(--hamburger-gap);
   width: max-content;
   position: absolute;
@@ -155,9 +294,11 @@ body {
 
 .sidebar {
   transition: right var(--animation-timing);
-  right: -100%; /* Change to -100% */
+  right: -100%;
+  /* Change to -100% */
   top: 0;
-  position: fixed; /* Add fixed positioning */
+  position: fixed;
+  /* Add fixed positioning */
   padding: 0.5rem 1rem;
   padding-top: calc(var(--hamburger-height) + var(--hamburger-margin) + 1rem);
   background-color: var(--foreground);
@@ -165,8 +306,10 @@ body {
   max-width: 10rem;
   min-height: 100vh;
 }
+
 .sidebar a {
-  text-align: right; /* Align text to the right */
+  text-align: right;
+  /* Align text to the right */
   padding: 0.5rem 1rem;
   color: var(--background);
   text-decoration: none;
@@ -174,146 +317,196 @@ body {
 }
 
 .sidebar a:hover {
-  color: #ddd; /* Change color on hover */
-}
-.hamburger-menu:has(input:checked) + .sidebar {
-   right: 0;
+  color: #ddd;
+  /* Change color on hover */
 }
 
-
-
-
-
-
-body {
-    line-height: 1;
+.hamburger-menu:has(input:checked)+.sidebar {
+  right: 0;
 }
 
-ol, ul {
-    list-style: none;
+
+
+
+
+
+
+ol,
+ul {
+  list-style: none;
 }
 
-blockquote, q {
-    quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-.headerlogo {
-   display: flex;
-   align-items: flex-start;
-}
 
-.container {
-    background-color: #F2E5D8;
-    font-family: "Helvetica Neue";
-}
 
 body {
-    font-family: "Helvetica Neue", Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-}
 
 header {
-    background-color: #F2E5D8;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: #F2E5D8;
+  padding: 20px;
+  /* display: flex; */
+  justify-content: space-between;
+  align-items: center;
 }
 
 h1 {
-    margin: 0;
+  margin: 0;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
-    margin-top: 20px;
-    border-radius: 15px; /* Add border-radius for curved edges */
+  max-width: 100%;
+  height: auto;
+  margin-top: 20px;
+  /* border-radius:; */
+  /* Add border-radius for curved edges */
 }
 
-h1, h2, h3, p {
-    color: #7B0F0F;
+h1,
+h2,
+h3,
+h5,
+p,
+ul {
+  color: #7B0F0F;
 }
 
+/* 
+footer p {
+  color: #F2E5D8;
+  background-color: #7B0F0F;
+  padding-top: 70px;
+  width: 100%;
+  /* Optional: Add padding for spacing */
+*/
 
-footer  p {
-   color: #F2E5D8;
-   background-color: #7B0F0F;
-   padding-top: 60px;
-   margin-left:1px;
-   /* Optional: Add padding for spacing */
-}
 /* home page styles */
-.main-nav, .skip-links {
-    list-style: none;
-    padding: 0;
-    border: 5px solid#7C0E0F;
-    border-top: none; /* Remove the top border */
-    padding: 15px; /* Increase padding for larger text */
+.main-nav,
+.skip-links {
+  list-style: none;
+  padding: 0;
+  border: 5px solid#7C0E0F;
+  border-top: none;
+  /* Remove the top border */
+  padding: 15px;
+  /* Increase padding for larger text */
 }
 
-.main-nav a, .skip-links a {
-    text-decoration: none;
-    color: #7C0E0F;
-    padding: 10px;
-    display: block;
-    font-size: 18px; /* Increase font size */
-    text:bold;
+.main-nav a,
+.skip-links a {
+  text-decoration: none;
+  color: #7C0E0F;
+  padding: 10px;
+  display: block;
+  font-size: 18px;
+  /* Increase font size */
+  text: bold;
 }
 
-.main-nav a:hover, .skip-links a:hover {
-    text-decoration: none;
-    background-color: #F2E5D8;
-    color: #c55e82;
-    font-size: 20px;
+.main-nav a:hover,
+.skip-links a:hover {
+  text-decoration: none;
+  background-color: #F2E5D8;
+  color: #c55e82;
+  font-size: 20px;
 
 }
+
 /* about page styles */
 
 .about-image {
-    max-width: 300px; /* Set the maximum width as needed */
-    width: 100%;
-    height: auto;
-    margin-right: 20px; /* Add margin to the right for spacing */
+  max-width: 300px;
+  /* Set the maximum width as needed */
+  width: 100%;
+  height: auto;
+  margin-right: 20px;
+  /* Add margin to the right for spacing */
 }
 
 /* Contact page styles */
 
-.rounded float-start,
+/* .rounded float-start,
 .rounded float-end {
     max-width: 100px;
     height: auto;
-    margin-right: 20px; /* Add spacing between the images */
+    margin-right: 20px; Add spacing between the images */
+/* } */
+.custom-img-size {
+  width: 200px;
+  /* Adjust the width as per your preference */
+  height: auto;
 }
-.contact-img{
-    max-width: 100px;
-    height: auto;
 
-}
 .custom-btn {
-    background-color: #7B0F0F;
-    color: white;
-    border: none;
+  background-color: #7B0F0F;
+  color: white;
+  border: none;
 }
 
-.custom-btn:hover {
-    background-color: #7B0F0F;
-    color: white;
+
+  .custom-btn:hover {
+    background-color: #E85859;
+    color: #F2E5D8; /* Optional: Change text color on hover */
+
+}
+
+.custom-form .form-control {
+  background-color: #F2E5D8;
+  border: 1px solid black;
+}
+
+.custom-form label,
+.custom-form .form-control {
+  color: #7B0F0F;
+  /* Set text color to your desired color, e.g., #7B0F0F */
+}
+
+.custom-line-height {
+  line-height: 1;
+  /* Adjust the value based on your preference */
+}
+
+.custom-form {
+  border-radius: 0; /* Remove rounded edges for the form */
+}
+
+.custom-btn {
+  border-radius: 0; /* Remove rounded edges for the button */
+}
+a {
+  color: #7B0F0F;
+  text-decoration: none;
+}
+a:hover {
+  animation: bounce 0.5s;
+}
+.custom-border {
+  border: 3px solid #7C0E0F;
+  border-top: none; /* Remove top border */
+  padding: 10px; /* Add padding for better visualization, adjust as needed */
+}
+.navbar-toggler-icon {
+  border: none; /* Remove the border */
+  color: #7C0E0F; /* Set the color */
 }
