--- a/css/main.css
+++ b/css/main.css
@@ -5,141 +5,6 @@
   --bs-primary-rgb: 124, 14, 15;
 
 
-
-
-
-
-
-
-  /* --bs-blue: #0d6efd;
-    --bs-indigo: #6610f2;
-    --bs-purple: #6f42c1;
-    --bs-pink: #d63384;
-    --bs-red: #dc3545;
-    --bs-orange: #fd7e14;
-    --bs-yellow: #ffc107;
-    --bs-green: #198754;
-    --bs-teal: #20c997;
-    --bs-cyan: #0dcaf0;
-    --bs-black: #000;
-    --bs-white: #fff;
-    --bs-gray: #6c757d;
-    --bs-gray-dark: #343a40;
-    --bs-gray-100: #f8f9fa;
-    --bs-gray-200: #e9ecef;
-    --bs-gray-300: #dee2e6;
-    --bs-gray-400: #ced4da;
-    --bs-gray-500: #adb5bd;
-    --bs-gray-600: #6c757d;
-    --bs-gray-700: #495057;
-    --bs-gray-800: #343a40;
-    --bs-gray-900: #212529;
-    --bs-secondary: #6c757d;
-    --bs-success: #198754;
-    --bs-info: #0dcaf0;
-    --bs-warning: #ffc107;
-    --bs-danger: #dc3545;
-    --bs-light: #f8f9fa;
-    --bs-dark: #212529;
-    --bs-secondary-rgb: 108,117,125;
-    --bs-success-rgb: 25,135,84;
-    --bs-info-rgb: 13,202,240;
-    --bs-warning-rgb: 255,193,7;
-    --bs-danger-rgb: 220,53,69;
-    --bs-light-rgb: 248,249,250;
-    --bs-dark-rgb: 33,37,41;
-    --bs-primary-text-emphasis: #052c65;
-    --bs-secondary-text-emphasis: #2b2f32;
-    --bs-success-text-emphasis: #0a3622;
-    --bs-info-text-emphasis: #055160;
-    --bs-warning-text-emphasis: #664d03;
-    --bs-danger-text-emphasis: #58151c;
-    --bs-light-text-emphasis: #495057;
-    --bs-dark-text-emphasis: #495057;
-    --bs-primary-bg-subtle: #cfe2ff;
-    --bs-secondary-bg-subtle: #e2e3e5;
-    --bs-success-bg-subtle: #d1e7dd;
-    --bs-info-bg-subtle: #cff4fc;
-    --bs-warning-bg-subtle: #fff3cd;
-    --bs-danger-bg-subtle: #f8d7da;
-    --bs-light-bg-subtle: #fcfcfd;
-    --bs-dark-bg-subtle: #ced4da;
-    --bs-primary-border-subtle: #9ec5fe;
-    --bs-secondary-border-subtle: #c4c8cb;
-    --bs-success-border-subtle: #a3cfbb;
-    --bs-info-border-subtle: #9eeaf9;
-    --bs-warning-border-subtle: #ffe69c;
-    --bs-danger-border-subtle: #f1aeb5;
-    --bs-light-border-subtle: #e9ecef;
-    --bs-dark-border-subtle: #adb5bd;
-    --bs-white-rgb: 255,255,255;
-    --bs-black-rgb: 0,0,0;
-    --bs-font-sans-serif: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    --bs-font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-    --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-    --bs-body-font-family: var(--bs-font-sans-serif);
-    --bs-body-font-size: 1rem;
-    --bs-body-font-weight: 400;
-    --bs-body-line-height: 1.5;
-    --bs-body-color: #212529;
-    --bs-body-color-rgb: 33,37,41;
-    --bs-emphasis-color: #000;
-    --bs-emphasis-color-rgb: 0,0,0;
-    --bs-secondary-color: rgba(33, 37, 41, 0.75);
-    --bs-secondary-color-rgb: 33,37,41;
-    --bs-secondary-bg: #e9ecef;
-    --bs-secondary-bg-rgb: 233,236,239;
-    --bs-tertiary-color: rgba(33, 37, 41, 0.5);
-    --bs-tertiary-color-rgb: 33,37,41;
-    --bs-tertiary-bg: #f8f9fa;
-    --bs-tertiary-bg-rgb: 248,249,250;
-    --bs-heading-color: inherit;
-    --bs-link-color: #0d6efd;
-    --bs-link-color-rgb: 13,110,253;
-    --bs-link-decoration: underline;
-    --bs-link-hover-color: #0a58ca;
-    --bs-link-hover-color-rgb: 10,88,202;
-    --bs-code-color: #d63384;
-    --bs-highlight-color: #212529;
-    --bs-highlight-bg: #fff3cd;
-    --bs-border-width: 1px;
-    --bs-border-style: solid;
-    --bs-border-color: #dee2e6;
-    --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
-    --bs-border-radius: 0.375rem;
-    --bs-border-radius-sm: 0.25rem;
-    --bs-border-radius-lg: 0.5rem;
-    --bs-border-radius-xl: 1rem;
-    --bs-border-radius-xxl: 2rem;
-    --bs-border-radius-2xl: var(--bs-border-radius-xxl);
-    --bs-border-radius-pill: 50rem;
-    --bs-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    --bs-box-shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-    --bs-box-shadow-lg: 0 1rem 3rem rgba(0, 0, 0, 0.175);
-    --bs-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
-    --bs-focus-ring-width: 0.25rem;
-    --bs-focus-ring-opacity: 0.25;
-    --bs-focus-ring-color: rgba(13, 110, 253, 0.25);
-    --bs-form-valid-color: #198754;
-    --bs-form-valid-border-color: #198754;
-    --bs-form-invalid-color: #dc3545;
-    --bs-form-invalid-border-color: #dc3545; */
-}
-
-:root {
-  /* --bs-emphasis-color: #c8fee3;
-    --bs-emphasis-color-rgb: 200, 254, 227; */
-
-  /* --bs-body-bg-rgb: 255, 255, 255;
-    --bs-secondary: #000000;
-    --bs-secondary-rgb: 0, 0, 0;
-    --bs-border-width: 0;
-    --bs-border-radius: 0;
-    --bs-heading-color: var(--bs-emphasis-color);
-    --bs-white: #fff;
-    --bs-white-rgb: 255, 255, 255;
-    --bs-primary-text-emphasis: #c8fee3;
-    --bs-dark-bg-subtle: #dcd5c1; */
 }
 
 body {
@@ -150,7 +15,7 @@ body {
 }
 h1 {
   font-family: 'Abril Fatface', serif;
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 p {
@@ -161,7 +26,7 @@ p {
 h2{
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 
@@ -195,134 +60,9 @@ table {
   /* Adjust the size as needed */
   height: auto;
   margin-bottom: 20px;
-  /* Remove margin */
   position: absolute;
   top: 0;
   left: 0;
-}
-
-
-
-
-
-/* THIS IS FOR THE OPEN NAV */
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-}
-
-:root {
-  --bar-width: 60px;
-  --bar-height: 8px;
-  --hamburger-gap: 6px;
-  --foreground: #7B0F0F;
-  --background: #F2E5D8;
-  --hamburger-margin: 8px;
-  --animation-timing: 200ms ease-in-out;
-  --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
-}
-
-.hamburger-menu {
-  --x-width: calc(var(--hamburger-height) * 1.41421356237);
-
-  /* display: flex; */
-  /* flex-direction: column; */
-  gap: var(--hamburger-gap);
-  width: max-content;
-  position: absolute;
-  top: var(--hamburger-margin);
-  right: var(--hamburger-margin);
-  z-index: 2;
-  cursor: pointer;
-}
-
-.hamburger-menu:has(input:checked) {
-  --foreground: white;
-  --background: #333;
-}
-
-.hamburger-menu:has(input:focus-visible)::before,
-.hamburger-menu:has(input:focus-visible)::after,
-.hamburger-menu input:focus-visible {
-  border: 1px solid var(--background);
-  box-shadow: 0 0 0 1px var(--foreground);
-}
-
-.hamburger-menu::before,
-.hamburger-menu::after,
-.hamburger-menu input {
-  content: "";
-  width: var(--bar-width);
-  height: var(--bar-height);
-  background-color: var(--foreground);
-  border-radius: 9999px;
-  transform-origin: left center;
-  transition: opacity var(--animation-timing), width var(--animation-timing),
-    rotate var(--animation-timing), translate var(--animation-timing),
-    background-color var(--animation-timing);
-}
-
-.hamburger-menu input {
-  appearance: none;
-  padding: 0;
-  margin: 0;
-  outline: none;
-  pointer-events: none;
-}
-
-.hamburger-menu:has(input:checked)::before {
-  rotate: 45deg;
-  width: var(--x-width);
-  translate: 0 calc(var(--bar-height) / -2);
-}
-
-.hamburger-menu:has(input:checked)::after {
-  rotate: -45deg;
-  width: var(--x-width);
-  translate: 0 calc(var(--bar-height) / 2);
-}
-
-.hamburger-menu input:checked {
-  opacity: 0;
-  width: 0;
-}
-
-.sidebar {
-  transition: right var(--animation-timing);
-  right: -100%;
-  /* Change to -100% */
-  top: 0;
-  position: fixed;
-  /* Add fixed positioning */
-  padding: 0.5rem 1rem;
-  padding-top: calc(var(--hamburger-height) + var(--hamburger-margin) + 1rem);
-  background-color: var(--foreground);
-  color: var(--background);
-  max-width: 10rem;
-  min-height: 100vh;
-}
-
-.sidebar a {
-  text-align: right;
-  /* Align text to the right */
-  padding: 0.5rem 1rem;
-  color: var(--background);
-  text-decoration: none;
-  transition: color var(--animation-timing);
-}
-
-.sidebar a:hover {
-  color: #ddd;
-  /* Change color on hover */
-}
-
-.hamburger-menu:has(input:checked)+.sidebar {
-  right: 0;
 }
 
 
@@ -366,7 +106,6 @@ body {
 header {
   background-color: #F2E5D8;
   padding: 20px;
-  /* display: flex; */
   justify-content: space-between;
   align-items: center;
 }
@@ -379,8 +118,7 @@ img {
   max-width: 100%;
   height: auto;
   margin-top: 20px;
-  /* border-radius:; */
-  /* Add border-radius for curved edges */
+  
 }
 
 h1,
@@ -392,14 +130,7 @@ ul {
   color: #7B0F0F;
 }
 
-/* 
-footer p {
-  color: #F2E5D8;
-  background-color: #7B0F0F;
-  padding-top: 70px;
-  width: 100%;
-  /* Optional: Add padding for spacing */
-*/
+
 
 /* home page styles */
 .main-nav,
@@ -421,7 +152,7 @@ footer p {
   display: block;
   font-size: 18px;
   /* Increase font size */
-  text: bold;
+  
 }
 
 .main-nav a:hover,
@@ -437,7 +168,6 @@ footer p {
 
 .about-image {
   max-width: 300px;
-  /* Set the maximum width as needed */
   width: 100%;
   height: auto;
   margin-right: 20px;
@@ -446,12 +176,7 @@ footer p {
 
 /* Contact page styles */
 
-/* .rounded float-start,
-.rounded float-end {
-    max-width: 100px;
-    height: auto;
-    margin-right: 20px; Add spacing between the images */
-/* } */
+
 .custom-img-size {
   width: 200px;
   /* Adjust the width as per your preference */
@@ -467,7 +192,7 @@ footer p {
 
   .custom-btn:hover {
     background-color: #E85859;
-    color: #F2E5D8; /* Optional: Change text color on hover */
+    color: #F2E5D8;  
 
 }
 
@@ -479,12 +204,11 @@ footer p {
 .custom-form label,
 .custom-form .form-control {
   color: #7B0F0F;
-  /* Set text color to your desired color, e.g., #7B0F0F */
+  /* Set text color to your desired color */
 }
 
 .custom-line-height {
   line-height: 1;
-  /* Adjust the value based on your preference */
 }
 
 .custom-form {
@@ -501,12 +225,46 @@ a {
 a:hover {
   animation: bounce 0.5s;
 }
+
 .custom-border {
   border: 3px solid #7C0E0F;
-  border-top: none; /* Remove top border */
-  padding: 10px; /* Add padding for better visualization, adjust as needed */
+  border-top: none;
+  padding: 10px; 
 }
+
 .navbar-toggler-icon {
-  border: none; /* Remove the border */
-  color: #7C0E0F; /* Set the color */
+  border: none;
+  color: #7C0E0F; 
+}
+
+a {
+  color: #7C0E0F;
+  transition: color 0.5s;
+}
+
+a:hover {
+  color: #E85859;
+  transition: color 0.5s;
+}
+
+.btn {
+  background-color: #7B0F0F;
+  color: white;
+  transition: background-color 0.5s, color 0.5s;
+}
+
+.btn:hover {
+  animation: animate__bounce;
+  background-color: #E85859;
+  color: #F2E5D8;
+  transition: background-color 0.5s, color 0.5s;
+}
+
+.skip-link a {
+  color: #7C0E0F;
+  transition: color 0.3s;
+}
+
+.skip-link a:hover {
+  color: #E85859;
 }
